[tool.poetry]
name = "yolo-v3-finetune"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "yolo_v3_finetune"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
lightning = "^2.5.0.post0"
jupyter = "^1.1.1"
torchvision = "^0.20.1"
opencv-python = "^4.10.0.84"
pandas = "^2.2.3"
ultralytics = "^8.3.56"
torchview = "^0.2.6"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
